--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.3",
     "md5": "^2.3.0",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "zustand": "^5.0.11"
